# algorithm_c

./: CMakeLists.txt  main.c
data_structures/array/: CArray.c  CArray.h  CArrayMain.c
data_structures/heap/: max_heap.c
sort/: bubble.c  insertion.c  main.c  selection.c  sort.c  sort.h
